--- a/firmware/manifest.json
+++ b/firmware/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Sentinel RFID Scanner",
     "version": "1.40",
-    "new_install_prompt_erase": true,
+    "new_install_prompt_erase": false,
     "new_install_improv_wait_time": 0,
     "builds": [
       {
